--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './utils/index';
+@import './base/index';
+@import './components/index';
+@import './layout/index';
