Edited the cards

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,11 @@
+
 <section class="products container">
     <p class="product-subtitle"> 100% natural</p>
     <h2 class="product-title">products</h2>
-    <ul class="product-card list">
-        <li class="product-content">
+
+    <ul class="product-content list">
+        <div class="product-card"> 
+        <li class="product-ice">
             <h1 class="product-name"> ice cream</h1>
             <p class="product-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et. dolore magna
@@ -13,7 +16,8 @@
                 </svg>
             </button>
         </li>
-        <li class="product-content">
+      
+        <li class="product-coffee">
             <h1 class="product-name"> ice coffee</h1>
             <p class="product-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et. dolore magna
@@ -24,7 +28,8 @@
                 </svg>
             </button>
         </li>
-        <li class="product-name">
+    
+        <li class="product-milkshake">
             <h1 class="product-name"> milkshakes</h1>
             <p class="product-description"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et. dolore
@@ -35,5 +40,6 @@
                 </svg>
             </button>
         </li>
+        </div>
     </ul>
 </section>
