--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,8 +1,60 @@
+.container {
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
+p,
+h1,
+h2,
+h3,
+h4 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.list {
+  list-style: none;
+}
+
 .products {
-  padding-top: 121px;
+  padding-top: 122px;
   padding-bottom: 98px;
   background-color: #ffffff;
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    width: 480px;
+    display: block;
+  }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-bottom: 112px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    padding-top: 127px;
+    padding-bottom: 119px;
+  }
 }
+/*.product-card {
+  @media screen and (min-width: 768px) {
+    width: 480px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}*/
 .product-subtitle {
   margin-bottom: 15px;
   font-family: Titan One;
@@ -13,6 +65,16 @@
   text-align: center;
   text-transform: uppercase;
   color: #ffa5ba;
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    font-size: 26px;
+    line-height: 1.15;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
 .product-title {
   margin-bottom: 144px;
@@ -24,8 +86,17 @@
   text-align: center;
   text-transform: uppercase;
   color: #d41443;
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    font-size: 48px;
+    margin-bottom: 150px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+    font-size: 58px;
+  }
 }
-.product-card {
+.product-content {
   margin: 0;
   padding: 0;
 }
@@ -43,6 +114,11 @@
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
   &::after {
     position: absolute;
     content: '•••';
@@ -65,6 +141,18 @@
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    line-height: 1.8;
+    margin-bottom: 40px;
+    padding: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+    font-size: 16px;
+    line-height: 1.75;
+    margin-bottom: 62px;
+  }
 }
 
 .product-ice {
@@ -75,6 +163,15 @@
   height: 485px;
   background: #ffb8ca;
   border-radius: 24px;
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    margin-bottom: 0px;
+    margin-right: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 329px;
+    height: 525px;
+  }
   &::before {
     position: absolute;
     content: '';
@@ -86,6 +183,14 @@
     background-image: url(../images/ice-cream1.png);
     background-repeat: no-repeat;
     background-position: center;
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 233px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      height: 335px;
+    }
   }
 }
 
@@ -99,6 +204,15 @@
   height: 485px;
   background: #f0d1a5;
   border-radius: 24px;
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    margin-bottom: 0px;
+    margin-right: 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 329px;
+    height: 525px;
+  }
   &::before {
     position: absolute;
     content: '';
@@ -110,6 +224,14 @@
     background-image: url(../images/coffee1.png);
     background-repeat: no-repeat;
     background-position: center;
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 233px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      height: 335px;
+    }
   }
 }
 
@@ -120,6 +242,14 @@
   height: 485px;
   background: #c2e297;
   border-radius: 24px;
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    margin-bottom: 0px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 329px;
+    height: 525px;
+  }
   &::before {
     position: absolute;
     content: '';
@@ -131,6 +261,14 @@
     background-image: url(../images/milk1.png);
     background-repeat: no-repeat;
     background-position: center;
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 233px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      height: 335px;
+    }
   }
 }
 
