--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,7 @@
                     <li class="footer-item-icon">
                         <a href="https://github.com/" target="_blank" class="footer-link link">
                             <svg class="footer-icon" widht="18.82" height="18.82">
-                                <use href="./img/sprite.svg#icon-vector"></use>
+                                <use href="./images/sprite-con.svg#icon-vector"></use>
                             </svg>
 
                         </a>
@@ -19,7 +19,7 @@
                     <li class="footer-item-icon">
                         <a href="https://web.telegram.org/z/" target="_blank" class="footer-link link">
                             <svg class="footer-icon" widht="19.2" height="14.93">
-                                <use href="./img/sprite.svg#icon-telegram"></use>
+                                <use href="./images/sprite-con.svg#icon-telegram"></use>
                             </svg>
 
                         </a>
@@ -27,7 +27,7 @@
                     <li class="footer-item-icon">
                         <a href="https://www.facebook.com/" target="_blank" class="footer-link link">
                             <svg class="footer-icon" widht="8.8" height="19.2">
-                                <use href="./img/sprite.svg#icon-faceb"></use>
+                                <use href="./images/sprite-con.svg#icon-faceb"></use>
                             </svg>
 
                         </a>
