--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
                 <ul class="footer-list list">
                     <li class="footer-item-icon">
                         <a href="https://github.com/" target="_blank" class="footer-link link">
-                            <svg class="footer-icon" widht="18.82" height="18.82">
+                            <svg class="footer-icon" height="18">
                                 <use href="./images/sprite-con.svg#icon-vector"></use>
                             </svg>
 
@@ -18,7 +18,7 @@
                     </li>
                     <li class="footer-item-icon">
                         <a href="https://web.telegram.org/z/" target="_blank" class="footer-link link">
-                            <svg class="footer-icon" widht="19.2" height="14.93">
+                            <svg class="footer-icon" height="15">
                                 <use href="./images/sprite-con.svg#icon-telegram"></use>
                             </svg>
 
@@ -26,17 +26,18 @@
                     </li>
                     <li class="footer-item-icon">
                         <a href="https://www.facebook.com/" target="_blank" class="footer-link link">
-                            <svg class="footer-icon" widht="8.8" height="19.2">
+                            <svg class="footer-icon" height="19">
                                 <use href="./images/sprite-con.svg#icon-faceb"></use>
                             </svg>
 
                         </a>
                     </li>
                 </ul>
-
-
-                <span class="footer-text-tel">Feel free to contact <a class="footer-tel link"
-                        href=" tel:+61 (0) 383 766 284">+61 (0) 383 766 284</a> </span>
+            
+                <span class="footer-text-tel">Feel free to contact
+                     <a href="tel:+61038766284" class="footer-tel link"> +61 (0) 383 766 284 </a>
+                     </span>
+           
             </div>
         </div>
         <div class="footer-container">
