section adventage is done
Додав include adventage.html та підключив, паршал _index.scss також підключив.

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -2,6 +2,7 @@
 @import './header';
 @import './products';
 @import './how-its-made';
+@import './advantages';
 @import './slidebar';
 @import './contacts';
 @import './footer';
