--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,3 +1,21 @@
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media screen and (min-width: 320px) {
+    max-width: 480px;
+  }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
+}
+
 .footer {
   background: #fff5f6;
 }
@@ -142,7 +160,6 @@
 
 .footer-rights-box {
   width: 150px;
-  padding: 5px;
 
   @media screen and (min-width: 768px) {
     width: auto;
