--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,6 +3,26 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.link {
+  text-decoration: none;
+}
+
 body {
   font-family: DM Sans, Verdana, sans-serif;
   font-size: 16px;
