прибрав коменти з gallery.html + підключив gallery в index.scss

--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -2,6 +2,6 @@
 @import './header';
 @import './products';
 @import './how-its-made';
-@import './slidebar';
+@import './gallery';
 @import './contacts';
 @import './footer';
