--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -3,5 +3,6 @@
 @import './products';
 @import './how-its-made';
 @import './slidebar';
+@import './reviews';
 @import './contacts';
 @import './footer';
