--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -1,10 +1,21 @@
 .reviews {
-  width: 320px;
+  max-width: 480px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
-  background-color: aqua;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding-left: 74px;
+    padding-right: 74px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    max-width: 1280px;
+    padding-left: 176px;
+    padding-right: 176px;
+  }
 }
 
 .reviews__img {
@@ -12,6 +23,14 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 15px;
+  }
 }
 
 .reviews__text-wrap {
@@ -24,29 +43,60 @@
   padding-bottom: 26px;
   &::before {
     content: '';
+    position: absolute;
     background-image: url(../images/quotes.svg);
     width: 54px;
     height: 40px;
   }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 24px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 15px;
+  }
 }
 
 .reviews__text {
-  //   display: block;
+  position: relative;
   text-align: center;
   margin: 0;
-  font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
   line-height: 2.55;
-  background-image: repeating-linear-gradient(180deg, transparent, transparent 29px, #000000 30px);
+  background-image: repeating-linear-gradient(180deg, transparent, transparent 29px, #e1e1e1 30px);
 }
 
 .reviews__city-name {
   display: block;
   text-align: center;
-  font-family: DM Sans;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.86;
   color: #000000;
+  &::before {
+    content: '';
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url(../images/points.png);
+    width: 32px;
+    height: 4px;
+    margin-bottom: 16px;
+  }
+  &::after {
+    content: '';
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-image: url(../images/hr-dots.png);
+    width: 72px;
+    height: 12px;
+    margin-top: 30px;
+
+    @media screen and (min-width: 768px) {
+      margin-top: 35px;
+    }
+  }
 }
