--- a/src/sass/base/_body.scss
+++ b/src/sass/base/_body.scss
@@ -1,4 +1,6 @@
 body {
+  width: 100vw;
+  height: 100vh;
   font-family: DM Sans, Verdana, sans-serif;
   font-size: 16px;
   letter-spacing: 0.04em;
