--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -16,14 +16,6 @@
     width: 1200px;
   }
 }
-p,
-h1,
-h2,
-h3,
-h4 {
-  margin-top: 0;
-  margin-bottom: 0;
-}
 
 .list {
   list-style: none;
@@ -47,14 +39,6 @@ h4 {
     padding-bottom: 119px;
   }
 }
-/*.product-card {
-  @media screen and (min-width: 768px) {
-    width: 480px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-}*/
 .product-subtitle {
   margin-bottom: 15px;
   font-family: Titan One;
@@ -65,6 +49,9 @@ h4 {
   text-align: center;
   text-transform: uppercase;
   color: #ffa5ba;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
     font-size: 26px;
@@ -86,6 +73,9 @@ h4 {
   text-align: center;
   text-transform: uppercase;
   color: #d41443;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
   @media screen and (min-width: 768px) {
     width: 768px;
     font-size: 48px;
@@ -103,7 +93,6 @@ h4 {
 
 .product-name {
   position: relative;
-  min-width: 100%;
   margin-top: 161px;
   margin-bottom: 66px;
   font-family: Titan One;
@@ -183,14 +172,29 @@ h4 {
     background-image: url(../images/ice-cream1.png);
     background-repeat: no-repeat;
     background-position: center;
+    // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    //   background-image: url(../images/ice-cream2.png);
+    // }
     @media screen and (min-width: 768px) {
       width: 220px;
       height: 233px;
+      // background-image: url(../images/ice-cream2x1.png);
     }
+    // @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/ice-cream2x2.png);
+    // }
     @media screen and (min-width: 1200px) {
       width: 335px;
       height: 335px;
+      // background-image: url(../images/ice-cream3x1.png);
     }
+    // @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/ice-cream3x2.png);
+    // }
   }
 }
 
@@ -224,14 +228,29 @@ h4 {
     background-image: url(../images/coffee1.png);
     background-repeat: no-repeat;
     background-position: center;
+    // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    //   background-image: url(../images/coffee2.png);
+    // }
     @media screen and (min-width: 768px) {
       width: 220px;
       height: 233px;
+      // background-image: url(../images/coffee2x1.png);
     }
+    // @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/coffee2x2.png);
+    // }
     @media screen and (min-width: 1200px) {
       width: 335px;
       height: 335px;
+      // background-image: url(../images/coffee3x1.png);
     }
+    // @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/coffee3x2.png);
+    // }
   }
 }
 
@@ -261,14 +280,29 @@ h4 {
     background-image: url(../images/milk1.png);
     background-repeat: no-repeat;
     background-position: center;
+    // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    //   background-image: url(../images/milk2.png);
+    // }
     @media screen and (min-width: 768px) {
       width: 220px;
       height: 233px;
+      // background-image: url(../images/milk2x1.png);
     }
+    // @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/milk2x2.png);
+    // }
     @media screen and (min-width: 1200px) {
       width: 335px;
       height: 335px;
+      // background-image: url(../images/milk3x1.png);
     }
+    // @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   background-image: url(../images/milk3x2.png);
+    // }
   }
 }
 
