--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -1,14 +1,3 @@
-.container {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin: 0 auto;
-}
-
-.list {
-  list-style: none;
-}
-
 .products {
   padding-top: 122px;
   padding-bottom: 98px;
@@ -77,6 +66,13 @@
 .product-content {
   margin: 0;
   padding: 0;
+}
+.product-card {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .product-name {
@@ -158,29 +154,28 @@
     background-image: url(../images/ice-cream1.png);
     background-repeat: no-repeat;
     background-position: center;
-    // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    //   background-image: url(../images/ice-cream2.png);
-    // }
-    // @media screen and (min-width: 768px) {
-    //   width: 220px;
-    //   height: 233px;
-    //   background-image: url(../images/ice-cream2x1.png);
-    // }
-    // @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/ice-cream2x2.png);
-    // }
-    // @media screen and (min-width: 1200px) {
-    //   width: 335px;
-    //   height: 335px;
-    //   background-image: url(../images/ice-cream3x1.png);
-    // }
-    // @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/ice-cream3x2.png);
-    // }
+    @media screen and (max-width: 767px) {
+      background-image: url(../images/ice-cream2-min.png);
+      background-size: contain;
+    }
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 233px;
+      background-image: url(../images/ice-cream2x1-min.png);
+    }
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/ice-cream2x2-min.png);
+      background-size: contain;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/ice-cream3x1-min.png);
+    }
+    @media screen and (min-width: 1200px) {
+      background-image: url(../images/ice-cream3x2-min.png);
+      background-size: contain;
+    }
   }
 }
 
@@ -212,29 +207,28 @@
     background-image: url(../images/coffee1.png);
     background-repeat: no-repeat;
     background-position: center;
-    // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    //   background-image: url(../images/coffee2.png);
-    // }
+    @media screen and (max-width: 767px) {
+      background-image: url(../images/coffee2-min.png);
+      background-size: contain;
+    }
     @media screen and (min-width: 768px) {
       width: 220px;
       height: 233px;
-      // background-image: url(../images/coffee2x1.png);
+      background-image: url(../images/coffee2x1-min.png);
     }
-    // @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/coffee2x2.png);
-    // }
-    // @media screen and (min-width: 1200px) {
-    //   width: 335px;
-    //   height: 335px;
-    //   background-image: url(../images/coffee3x1.png);
-    // }
-    // @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/coffee3x2.png);
-    // }
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/coffee2x2-min.png);
+      background-size: contain;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/coffee3x1-min.png);
+    }
+    @media screen and (min-width: 1200px) {
+      background-image: url(../images/coffee3x2-min.png);
+      background-size: contain;
+    }
   }
 }
 
@@ -262,29 +256,28 @@
     background-image: url(../images/milk1.png);
     background-repeat: no-repeat;
     background-position: center;
-    // @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-    //   background-image: url(../images/milk2.png);
-    // }
-    // @media screen and (min-width: 768px) {
-    //   width: 220px;
-    //   height: 233px;
-    //   background-image: url(../images/milk2x1.png);
-    // }
-    // @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/milk2x2.png);
-    // }
-    // @media screen and (min-width: 1200px) {
-    //   width: 335px;
-    //   height: 335px;
-    //   background-image: url(../images/milk3x1.png);
-    // }
-    // @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
-    //   (min-resolution: 192dpi),
-    //   (min-resolution: 2dppx) {
-    //   background-image: url(../images/milk3x2.png);
-    // }
+    @media screen and (max-width: 767px) {
+      background-image: url(../images/milk2-min.png);
+      background-size: contain;
+    }
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 233px;
+      background-image: url(../images/milk2x1-min.png);
+    }
+    @media screen and (min-width: 768px) {
+      background-image: url(../images/milk2x2-min.png);
+      background-size: contain;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 335px;
+      height: 335px;
+      background-image: url(../images/milk3x1-min.png);
+    }
+    @media screen and (min-width: 1200px) {
+      background-image: url(../images/milk3x2-min.png);
+      background-size: contain;
+    }
   }
 }
 
