--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -641,20 +641,6 @@ img {
   fill: #d41443;
 }
 
-body {
-  margin: 0;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
-}
-
 .how-its-made {
   font-weight: normal;
   letter-spacing: normal;
@@ -665,6 +651,7 @@ h6 {
   background-position: 0 768px;
   font-family: DM Sans;
   padding-top: 125px;
+  padding-bottom: 39px;
 }
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -698,20 +685,20 @@ h6 {
   }
 }
 
-.how-its-made-container {
+.how-its-made-main {
   margin-left: auto;
   margin-right: auto;
   width: 320px;
 }
 
 @media screen and (min-width: 768px) {
-  .how-its-made-container {
+  .how-its-made-main {
     width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .how-its-made-container {
+  .how-its-made-main {
     width: 1200px;
   }
 }
