--- a/src/sass/layout/_how-its-made.scss
+++ b/src/sass/layout/_how-its-made.scss
@@ -1,17 +1,3 @@
-body {
-    margin: 0;
-}
-
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-  }
-  
 
 .how-its-made{
     font-weight: normal;
@@ -23,6 +9,7 @@ h6 {
     background-position: 0 768px;
     font-family: DM Sans;
     padding-top: 125px;
+    padding-bottom: 39px;
     @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
@@ -47,7 +34,7 @@ h6 {
   }
 }
 
-.how-its-made-container{
+.how-its-made-main{
     margin-left: auto;
     margin-right: auto;
     width: 320px;
