--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,12 +17,12 @@
             <div class="burger-button_wrap">
                 <button type="button" class="page-header_burger ">
                     <svg class="header-burger_icon">
-                        <use href="./img/symbol-defs.svg#icon-Burger"></use>
+                        <use href="./images/symbol-defs.svg#icon-Burger"></use>
                     </svg>
                 </button>
                 <button type="button" class="page-header_button ">Buy now
                     <svg class="header-tablet-button_icon">
-                        <use href="./img/symbol-defs.svg#icon-Vector-1-2"></use>
+                        <use href="./images/symbol-defs.svg#icon-Vector-1-2"></use>
                     </svg>
                 </button>
             </div>
@@ -44,13 +44,13 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et</p>
                         <button type="button" class="hero-text_button">
-                            <img class="arrow-btn" src="./img/arrow-right 3.svg" alt="">
+                            <img class="arrow-btn" src="./images/arrow-right 3.svg" alt="">
                         </button>
-                        <img class="hero-image-milk" src="./img/milk.svg" alt="">
+                        <img class="hero-image-milk" src="" alt=""> <!--  було -> ./images/milk.svg Перевірити іконку -->
                     </div>
                 </div>
                 <div class="hero-ellipse"><img class="hero-image_icecream" src="./img/icecream-mob.svg" alt="">
-                    <img class="hero-img_girl" src="./img/girl.svg" alt="">
+                    <img class="hero-img_girl" src="./images/girl.svg" alt="">
                 </div>
                 <div class="hero-numbers_box">
                     <p class="cafes"> <span class="hero_numbers">16</span> cafes</p>
