Fixed hero images

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,12 +44,12 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et</p>
                         <button type="button" class="hero-text_button">
-                            <img class="arrow-btn" src="./images/arrow-right 3.svg" alt="">
+                            <img class="arrow-btn" src="./images/buy-arrow-right-1x.svg" alt="">
                         </button>
-                        <img class="hero-image-milk" src="" alt=""> <!--  було -> ./images/milk.svg Перевірити іконку -->
+                        <img class="hero-image-milk" src="./images/bio-eco-milk.svg" alt=""> <!--  було -> ./images/milk.svg Перевірити іконку -->
                     </div>
                 </div>
-                <div class="hero-ellipse"><img class="hero-image_icecream" src="./img/icecream-mob.svg" alt="">
+                <div class="hero-ellipse"><img class="hero-image_icecream" src="./images/icecream-mob.svg" alt="">
                     <img class="hero-img_girl" src="./images/girl.svg" alt="">
                 </div>
                 <div class="hero-numbers_box">
