--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -85,6 +85,7 @@
 .hero {
   min-height: 502px;
   background-color: var(--hero-bg-color);
+  position: relative;
 
   @media screen and (min-width: 768px) {
     min-height: 399px;
