--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -27,6 +27,10 @@
   transform: translate(-50%, -50%);
   padding: 40px;
   width: 450px;
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
 
 .modal-form-field {
@@ -151,7 +155,7 @@
 .checkbox:checked + .check-lable::before {
   background: #c7133e;
   fill: #ecebeb;
-  background-image: url(../img/Vector.svg);
+  background-image: url(../images/modal-vektor.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
