Updated images names

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,7 @@
                 </button>
                 <button type="button" class="page-header_button ">Buy now
                     <svg class="header-tablet-button_icon">
-                        <use href="./images/symbol-defs.svg#icon-Vector-1-2"></use>
+                        <use href="./images/arrow-right-for-button.svg"></use>
                     </svg>
                 </button>
             </div>
@@ -44,13 +44,14 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et</p>
                         <button type="button" class="hero-text_button">
-                            <img class="arrow-btn" src="./images/buy-arrow-right-1x.svg" alt="">
+                            <img class="arrow-btn" src="./images/arrow-right-read-more.svg" alt="">
                         </button>
                         <img class="hero-image-milk" src="./images/bio-eco-milk.svg" alt=""> <!--  було -> ./images/milk.svg Перевірити іконку -->
                     </div>
                 </div>
-                <div class="hero-ellipse"><img class="hero-image_icecream" src="./images/icecream-mob.svg" alt="">
-                    <img class="hero-img_girl" src="./images/girl.svg" alt="">
+                <div class="hero-ellipse">
+                    <img class="hero-image_icecream" src="./images/ice-cream-hero-desktop.svg" alt="">
+                    <img class="hero-img_girl" src="../images/girl-tasty-hero-desktop.svg" alt="">  <!--  було -> ./images/girl.svg Перевірити іконку -->
                 </div>
                 <div class="hero-numbers_box">
                     <p class="cafes"> <span class="hero_numbers">16</span> cafes</p>
