Wrong path to images/girl-tasty-hero-desktop.svg

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="hero-ellipse">
                     <img class="hero-image_icecream" src="./images/ice-cream-hero-desktop.svg" alt="">
-                    <img class="hero-img_girl" src="../images/girl-tasty-hero-desktop.svg" alt="">  <!--  було -> ./images/girl.svg Перевірити іконку -->
+                    <img class="hero-img_girl" src="./images/girl-tasty-hero-desktop.svg" alt="">  <!--  було -> ./images/girl.svg Перевірити іконку -->
                 </div>
                 <div class="hero-numbers_box">
                     <p class="cafes"> <span class="hero_numbers">16</span> cafes</p>
