--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -64,5 +64,6 @@
             <div class="modal-footer">
             <button class="modal-btn btn" type="button">Buy now </button>
           </form>
-          <img src="../images/modal-milk.png" alt="" /></div>
+          <img class="back-img" src="../images/modal-milk.png" alt="" /></div>
         </div>
+        
