--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -1,4 +1,4 @@
-.btn {
+.modal-btn {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.31;
@@ -8,10 +8,14 @@
   border-radius: 22px;
   padding: 20px 37px 20px 37px;
   border: none;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.btn:hover,
-.btn:focus {
+.modal-btn:hover,
+.modal-btn:focus {
   background-color: #c7133e;
   color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -182,7 +186,7 @@
   transform: translate(-50%, -50%);
 }
 
-img {
+.back-img {
   width: 100%;
 }
 
