--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -2,9 +2,8 @@
   padding-top: 122px;
   padding-bottom: 98px;
   background-color: #ffffff;
-  @media screen and (min-width: 480px) and (max-width: 767px) {
-    width: 480px;
-    display: block;
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    width: 320px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -26,16 +25,16 @@
   text-align: center;
   text-transform: uppercase;
   color: #ffa5ba;
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (min-width: 320px) {
+    width: 320;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    width: 100%;
     font-size: 26px;
     line-height: 1.15;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    width: 100%;
     font-size: 30px;
     line-height: 1.13;
   }
@@ -50,17 +49,17 @@
   text-align: center;
   text-transform: uppercase;
   color: #d41443;
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (min-width: 320px) {
+    width: 100%;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    width: 100%;
     font-size: 48px;
     margin-bottom: 150px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
     font-size: 58px;
+    margin-bottom: 259px;
   }
 }
 .product-content {
@@ -87,10 +86,13 @@
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
-
+  @media screen and (min-width: 768px) {
+    margin-top: 152px;
+  }
   @media screen and (min-width: 1200px) {
     font-size: 30px;
     line-height: 1.13;
+    margin-top: 163px;
   }
   &::after {
     position: absolute;
@@ -116,15 +118,14 @@
   color: #ffffff;
   @media screen and (min-width: 768px) {
     max-width: 768px;
-    line-height: 1.8;
+    line-height: 1.6;
     margin-bottom: 40px;
-    padding: 0;
+    padding: 0 10px;
   }
   @media screen and (min-width: 1200px) {
     max-width: 1200px;
     font-size: 16px;
-    line-height: 1.75;
-    margin-bottom: 62px;
+    padding: 0 40px;
   }
 }
 
@@ -154,7 +155,7 @@
     background-image: url(../images/ice-cream1.png);
     background-repeat: no-repeat;
     background-position: center;
-    @media screen and (max-width: 767px) {
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(../images/ice-cream2-min.png);
       background-size: contain;
     }
@@ -163,7 +164,9 @@
       height: 233px;
       background-image: url(../images/ice-cream2x1-min.png);
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       background-image: url(../images/ice-cream2x2-min.png);
       background-size: contain;
     }
@@ -172,7 +175,9 @@
       height: 335px;
       background-image: url(../images/ice-cream3x1-min.png);
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       background-image: url(../images/ice-cream3x2-min.png);
       background-size: contain;
     }
@@ -207,7 +212,7 @@
     background-image: url(../images/coffee1.png);
     background-repeat: no-repeat;
     background-position: center;
-    @media screen and (max-width: 767px) {
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(../images/coffee2-min.png);
       background-size: contain;
     }
@@ -216,7 +221,9 @@
       height: 233px;
       background-image: url(../images/coffee2x1-min.png);
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       background-image: url(../images/coffee2x2-min.png);
       background-size: contain;
     }
@@ -225,7 +232,9 @@
       height: 335px;
       background-image: url(../images/coffee3x1-min.png);
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       background-image: url(../images/coffee3x2-min.png);
       background-size: contain;
     }
@@ -256,7 +265,7 @@
     background-image: url(../images/milk1.png);
     background-repeat: no-repeat;
     background-position: center;
-    @media screen and (max-width: 767px) {
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: url(../images/milk2-min.png);
       background-size: contain;
     }
@@ -265,7 +274,9 @@
       height: 233px;
       background-image: url(../images/milk2x1-min.png);
     }
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       background-image: url(../images/milk2x2-min.png);
       background-size: contain;
     }
@@ -274,7 +285,9 @@
       height: 335px;
       background-image: url(../images/milk3x1-min.png);
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
       background-image: url(../images/milk3x2-min.png);
       background-size: contain;
     }
