--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,9 +1,9 @@
 <div class="contacts ">
-    <div class="container__contacts">
+    <div class="container__contacts container">
     <h2 class=visually-hidden>Contacts</h2>
     <ul class="contacts__list">
-            <li class="contact">
-                <div class="contact-container">
+            <li class="contact ">
+                <div class="contact-container ">
                 <div class="category">CAFE</div>
                 <h3 class="contacts__header">Chicago</h3>
                 <p class="contacts__text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
