--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,29 +1,53 @@
-
-    <section class="how-its-made">
-        <div class="how-its-made-main">
-            <div class="container">
-                <h2 class="how-its-made__first-title">TRADITION AND LOVE</h2>
-                <h1 class="how-its-made__second-title">HOW IT’S MADE?</h1>
-                <div class="how-its-made-picture-and-text">
-                    <picture class="how-its-made__picture">
-                        <source srcset="../images/how-its-made/cows-desk-1.png 1x, ../images/how-its-made/cows-desk-2.png 2x" media="(min-width:1200px)"/>
-                        <source srcset="../images/how-its-made/cows-tab-1.png 1x, ../images/how-its-made/cows-tab-2.png 2x" media="(min-width:768px)"/>
-                        <source srcset="../images/how-its-made/cows-mob-1.png 1x, ../images/how-its-made/cows-mob-2.png 2x" />               
-                        <img class="how-its-made__image"src="#">
-                    </picture>
-                    <div class="how-its-made-right">
-                        <p class="how-its-made__first-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-                        <div class="how-its-made__second-text">
-                            <p class="second-text__top">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
-                            <p class="second-text__bottom">Aliquam erat volutpat. Aenean accumsan.</p>
-                        </div>
-                        <button type="button" class="how-its-made__btn"><span class="how-its-made__read-more">Read more</span>
-                            <svg width="7" height="10">
-                                <use href="../images/sprite-con.svg#icon-red"></use>
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-            </div>
+<section class="how-its-made">
+  <div class="how-its-made-main">
+    <div class="container">
+      <h2 class="how-its-made__first-title">TRADITION AND LOVE</h2>
+      <h1 class="how-its-made__second-title">HOW IT’S MADE?</h1>
+      <div class="how-its-made-picture-and-text">
+        <picture class="how-its-made__picture">
+          <source
+            srcset="
+              ../images/how-its-made/cows-desk-1.png 1x,
+              ../images/how-its-made/cows-desk-2.png 2x
+            "
+            media="(min-width:1200px)"
+          />
+          <source
+            srcset="
+              ../images/how-its-made/cows-tab-1.png 1x,
+              ../images/how-its-made/cows-tab-2.png 2x
+            "
+            media="(min-width:768px)"
+          />
+          <source
+            srcset="
+              ../images/how-its-made/cows-mob-1.png 1x,
+              ../images/how-its-made/cows-mob-2.png 2x
+            "
+          />
+          <img class="how-its-made__image" src="#" />
+        </picture>
+        <div class="how-its-made-right">
+          <p class="how-its-made__first-text">
+            Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus
+            lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.
+          </p>
+          <div class="how-its-made__second-text">
+            <p class="second-text__top">
+              Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus
+              orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a
+              feugiat urna maximus. Cras massa nibh, tincidunt.
+            </p>
+            <p class="second-text__bottom">Aliquam erat volutpat. Aenean accumsan.</p>
+          </div>
+          <button type="button" class="how-its-made__btn">
+            <span class="how-its-made__read-more">Read more</span>
+            <svg width="7" height="10">
+              <!-- <use href="../images/sprite-con.svg#icon-red"></use> -->
+            </svg>
+          </button>
         </div>
-    </section>
+      </div>
+    </div>
+  </div>
+</section>
