--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,20 +1,37 @@
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
+// .container {
+//   margin-left: auto;
+//   margin-right: auto;
+//   width: 100%;
+//   padding-left: 20px;
+//   padding-right: 20px;
 
-  @media screen and (min-width: 320px) {
-    max-width: 480px;
-  }
-  @media screen and (min-width: 768px) {
-    max-width: 768px;
-  }
-  @media screen and (min-width: 1200px) {
-    max-width: 1200px;
-  }
-}
+//   @media screen and (min-width: 320px) {
+//     max-width: 480px;
+//   }
+//   @media screen and (min-width: 768px) {
+//     max-width: 768px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     max-width: 1200px;
+//   }
+// }
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6,
+// p {
+//   margin: 0;
+// }
+// .list {
+//   list-style: none;
+//   padding: 0;
+//   margin: 0;
+// }
+// .link {
+//   text-decoration: none;
+// }
 .footer {
   background: #fff5f6;
 }
