--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -5,6 +5,8 @@
   margin-left: auto;
   margin-right: auto;
 
+  margin-bottom: 234px;
+
   @media screen and (min-width: 768px) {
     max-width: 768px;
     padding-left: 74px;
@@ -20,6 +22,7 @@
 
 .reviews__img {
   display: block;
+  width: 85px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
