--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
         <div class="modal">
           <button type="button" class="modal-close" data-modal-close>
             <svg class="close-icon" width="15" height="15">
-              <use href="./images/symbol-defs.svg#icon-close"></use>
+              <use href="./images/sprite-modal.svg#icon-close"></use>
             </svg>
           </button>
           <form action="+" class="modal-form">
@@ -17,7 +17,7 @@
                   class="modal-form-input"
                 />
                 <svg class="modal-icon" width="15" height="15">
-                  <use href="./images/symbol-defs.svg#icon-user"></use>
+                  <use href="./images/sprite-modal.svg#icon-user"></use>
                 </svg>
               </span>
             </div>
@@ -31,7 +31,7 @@
                   class="modal-form-input"
                 />
                 <svg class="modal-icon" width="15" height="15">
-                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                  <use href="./images/sprite-modal.svgicon-phone"></use>
                 </svg>
               </span>
             </div>
