--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -159,7 +159,7 @@
 .checkbox:checked + .check-lable::before {
   background: #c7133e;
   fill: #ecebeb;
-  background-image: url(./images/Vector.svg);
+  background-image: url(../images/Vector.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
