--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,32 +1,37 @@
-<div class="gallery">
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream1.jpg 370w, ./images/icecream/compressed/icecream1@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream1.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream2.jpg 370w, ./images/icecream/compressed/icecream2@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream2.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream3.jpg 370w, ./images/icecream/compressed/icecream3@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream3.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream4.jpg 370w, ./images/icecream/compressed/icecream4@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream4.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream5.jpg 370w, ./images/icecream/compressed/icecream5@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream5.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream6.jpg 370w, ./images/icecream/compressed/icecream6@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream6.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream7.jpg 370w, ./images/icecream/compressed/icecream7@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream7.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream8.jpg 370w, ./images/icecream/compressed/icecream8@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream8.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream9.jpg 370w, ./images/icecream/compressed/icecream9@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream9.jpg" alt="мороженное" />
-  <img class="item"
-    srcset="./images/icecream/compressed/icecream11.jpg 370w, ./images/icecream/compressed/icecream11@2x.jpg 740w"
-    src="./images/icecream/compressed/icecream11.jpg" alt="мороженное" />
-</div>
+<section class="gallery">
+  <div class="container">
+    <div class="gallery-masonry">
+      <img class="item persent-size"
+        srcset="./images/icecream1.jpg 370w, ./images/icecream1@2x.jpg 740w"
+        src="./images/icecream1.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream2.jpg 370w, ./images/icecream2@2x.jpg 740w"
+        src="./images/icecream2.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream3.jpg 370w, ./images/icecream3@2x.jpg 740w"
+        src="./images/icecream3.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream4.jpg 370w, ./images/icecream4@2x.jpg 740w"
+        src="./images/icecream4.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream5.jpg 370w, ./images/icecream5@2x.jpg 740w"
+        src="./images/icecream5.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream6.jpg 370w, ./images/icecream6@2x.jpg 740w"
+        src="./images/icecream6.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream7.jpg 370w, ./images/icecream7@2x.jpg 740w"
+        src="./images/icecream7.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream8.jpg 370w, ./images/icecream8@2x.jpg 740w"
+        src="./images/icecream8.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream9.jpg 370w, ./images/icecream9@2x.jpg 740w"
+        src="./images/icecream9.jpg" alt="мороженное" />
+      <img class="item persent-size"
+        srcset="./images/icecream11.jpg 370w, ./images/icecream11@2x.jpg 740w"
+        src="./images/icecream11.jpg" alt="мороженное" />
+    </div>
+  </div>
+</section>
+
