--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -62,7 +62,7 @@
               >
             </div>
             <div class="modal-footer">
-            <button class="modal-btn btn" type="button">Buy now </button>
+            <button class="btn-modal" type="button">Buy now </button>
           </form>
           <img src="" alt="" /></div>
         </div>
