--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -1,4 +1,4 @@
-.btn {
+.btn-modal {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.31;
@@ -10,8 +10,8 @@
   border: none;
 }
 
-.btn:hover,
-.btn:focus {
+.btn-modal:hover,
+.btn-modal:focus {
   background-color: #c7133e;
   color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
