--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
     <div class=" container ">
         <div class="page-header_menu">
             <a href="index.html" class="header-logo">
-                <h2 class="header-logo">icecream</h2>
+                <h2 class="header-logo_title">icecream</h2>
             </a>
             <nav class="header-nav">
                 <ul class="header-nav_list">
@@ -16,14 +16,11 @@
             </nav>
             <div class="burger-button_wrap">
                 <button type="button" class="page-header_burger ">
-                    <svg class="header-burger_icon">
-                        <use href="./images/symbol-defs.svg#icon-Burger"></use>
-                    </svg>
+                     
+                     
                 </button>
-                <button type="button" class="page-header_button ">Buy now
-                    <svg class="header-tablet-button_icon">
-                        <use href="./images/arrow-right-for-button.svg"></use>
-                    </svg>
+                <button type="button" class="page-header_button "> <span class="button-word">Buy now</span> 
+                    
                 </button>
             </div>
         </div>
