--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,7 +1,11 @@
 .page-header_burger {
+  width: 20px;
+  height: 14px;
   border: none;
   background-color: inherit;
+
   display: flex;
+  background-image: url(../../src/images/Burger.svg);
   @media screen and (min-width: 768px) {
     margin-right: 30px;
   }
@@ -23,7 +27,9 @@
   cursor: pointer;
   color: var(--accent-color);
   @media screen and (min-width: 768px) {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -31,6 +37,22 @@
     background-color: #ecebeb;
   }
 }
+
+.button-word {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.button-word::after {
+  content: '';
+  display: block;
+  width: 7px;
+  height: 10px;
+  margin-left: 15px;
+  background-image: url(../../src/images/arrow-right-for-button.svg);
+  background-repeat: no-repeat;
+}
+
 .products-button {
   cursor: pointer;
   min-width: 62px;
@@ -43,11 +65,14 @@
   background-color: var(--accent-color);
   border: none;
   border-radius: 20px;
+  margin-right: 7px;
+
   @media screen and (min-width: 1280px) {
     min-width: 104px;
     padding: 14px 21px;
     font-size: 14px;
     line-height: 1.28;
+    margin-right: 15px;
   }
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
