--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,219 +1,236 @@
 // HERO
 .hero {
-    min-height: 502px;
-    background-color: var(--hero-bg-color);
+  min-height: 502px;
+  background-color: var(--hero-bg-color);
+  position: relative;
+  overflow: hidden;
+
+  @media screen and (min-width: 768px) {
+    min-height: 399px;
+  }
+  @media screen and (min-width: 1280px) {
+    min-height: 665px;
+  }
+}
+.hero-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+.hero-title_box {
+  width: 228px;
+  margin-top: 193px;
+  z-index: 3;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 102px;
+    width: 161px;
     position: relative;
-    overflow: hidden;
-  
-    @media screen and (min-width: 768px) {
-      min-height: 399px;
-    }
-    @media screen and (min-width: 1280px) {
-      min-height: 665px;
-    }
   }
-  .hero-wrap {
-    display: flex;
-    justify-content: space-between;
+  @media screen and (min-width: 1280px) {
+    margin-top: 171px;
+    width: 277px;
   }
-  .hero-title_box {
-    width: 228px;
-    margin-top: 193px;
-    z-index: 3;
-  
-    @media screen and (min-width: 768px) {
-      margin-top: 102px;
-      width: 161px;
-      position: relative;
-    }
-    @media screen and (min-width: 1280px) {
-      margin-top: 171px;
-      width: 277px;
-    }
-  }
-  
-  .hero_title {
+}
+
+.hero_title {
+  margin-bottom: 20px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 26px;
+  line-height: 1.15;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--first-text-color);
+  @media screen and (min-width: 768px) {
+    font-size: 22px;
+    line-height: 1.13;
     margin-bottom: 20px;
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 26px;
+  }
+  @media screen and (min-width: 1280px) {
+    font-size: 38px;
+    line-height: 1.15;
+  }
+}
+.hero_word {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 34px;
+  line-height: 0.91;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  @media screen and (min-width: 1280px) {
+    font-size: 58px;
+    line-height: 0.89;
+  }
+}
+
+.hero-text {
+  display: none;
+
+  width: 114px;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 1.5;
+  color: var(--first-text-color);
+  @media screen and (min-width: 768px) {
+    display: block;
+    width: 114px;
+    margin-top: 66px;
+    margin-left: 120px;
+  }
+  @media screen and (min-width: 1280px) {
+    display: block;
+    margin-top: 112px;
+    margin-left: 180px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.42;
+  }
+}
+
+.hero-ellipse {
+  min-width: 346px;
+  position: absolute;
+  height: 344px;
+  background-color: var(--third-text-color);
+  border-radius: 50%;
+  margin-top: 83px;
+  @media screen and (min-width: 768px) {
+    position: relative;
+    width: 324px;
+    height: 322px;
+    margin-top: 28px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 538px;
+    height: 538px;
+    margin-top: 52px;
+  }
+}
+
+.hero-image_icecream {
+  position: absolute;
+  top: 9px;
+  left: 81px;
+
+  width: 171px;
+  height: 410px;
+  @media screen and (min-width: 768px) {
+    width: 143px;
+    height: 336px;
+    top: 35px;
+    left: 78px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 236px;
+    height: 557px;
+    top: 56px;
+    left: 119px;
+  }
+}
+
+.hero-numbers_box {
+  display: none;
+  width: 43px;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 1.25;
+  text-align: right;
+  color: var(--first-text-color);
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-top: 103px;
+    width: 43px;
+  }
+  @media screen and (min-width: 1280px) {
+    width: 74px;
+    margin-top: 171px;
+
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
+.hero_numbers {
+  z-index: 1;
+  position: relative;
+
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 28px;
+  line-height: 1.14;
+  text-align: right;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--accent-color);
+  &::after {
+    content: '';
+    width: 30px;
+    height: 30px;
+    background-color: var(--first-text-color);
+    position: absolute;
+    top: -5px;
+    right: -15px;
+    border-radius: 50%;
+    z-index: -1;
+  }
+
+  @media screen and (min-width: 1280px) {
+    font-size: 46px;
     line-height: 1.15;
     letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--first-text-color);
-    @media screen and (min-width: 768px) {
-      font-size: 22px;
-      line-height: 1.13;
-      margin-bottom: 20px;
-    }
-    @media screen and (min-width: 1280px) {
-      font-size: 38px;
-      line-height: 1.15;
-    }
   }
-  .hero_word {
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 48px;
-    line-height: 0.95;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--accent-color);
-    @media screen and (min-width: 1280px) {
-      font-size: 58px;
-      line-height: 0.89;
-    }
+}
+
+.cafes {
+  margin-bottom: 22px;
+
+  @media screen and (min-width: 1280px) {
+    margin-bottom: 32px;
   }
-  
-  .hero-text {
-    display: none;
-  
-    width: 114px;
-    font-weight: normal;
-    font-size: 8px;
-    line-height: 1.5;
-    color: #ffffff;
-    @media screen and (min-width: 768px) {
-      display: block;
-      width: 114px;
-      margin-top: 66px;
-      margin-left: 120px;
-    }
-    @media screen and (min-width: 1280px) {
-      display: block;
-      margin-top: 112px;
-      margin-left: 180px;
-      width: 200px;
-      font-size: 14px;
-      line-height: 1.42;
-    }
+}
+
+.hero-image-milk {
+  display: none;
+  position: absolute;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    width: 124px;
+    height: 126px;
+    bottom: 0px;
+    left: 0px;
   }
-  
-  .hero-ellipse {
-    min-width: 346px;
-    position: absolute;
-    height: 344px;
-    background-color: var(--third-text-color);
-    border-radius: 50%;
-    margin-top: 83px;
-    @media screen and (min-width: 768px) {
-      position: relative;
-      width: 324px;
-      height: 322px;
-      margin-top: 28px;
-    }
-    @media screen and (min-width: 1280px) {
-      width: 538px;
-      height: 538px;
-      margin-top: 52px;
-    }
+  @media screen and (min-width: 1280px) {
+    display: block;
+    width: 188px;
+    height: 191px;
+    bottom: 0px;
+    left: -38px;
   }
-  
-  .hero-image_icecream {
-    position: absolute;
-    top: 9px;
-    left: 81px;
-  
-    width: 171px;
-    height: 410px;
-    @media screen and (min-width: 768px) {
-      width: 143px;
-      height: 336px;
-      top: 35px;
-      left: 78px;
-    }
-    @media screen and (min-width: 1280px) {
-      width: 236px;
-      height: 557px;
-      top: 56px;
-      left: 119px;
-    }
-  }
-  
-  .hero-numbers_box {
-    display: none;
-    width: 43px;
-    font-weight: normal;
-    font-size: 8px;
-    line-height: 1.25;
-    text-align: right;
-    color: var(--first-text-color);
-    @media screen and (min-width: 768px) {
-      display: block;
-      margin-top: 103px;
-      width: 43px;
-    }
-    @media screen and (min-width: 1280px) {
-      width: 74px;
-      margin-top: 171px;
-  
-      font-size: 14px;
-      line-height: 1.28;
-    }
-  }
-  .hero_numbers {
-    font-family: Titan One;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 1.14;
-    text-align: right;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: var(--accent-color);
-    @media screen and (min-width: 1280px) {
-      font-size: 46px;
-      line-height: 1.15;
-      letter-spacing: 0.04em;
-    }
-  }
-  
-  .cafes {
-    margin-bottom: 22px;
-    @media screen and (min-width: 1280px) {
-      margin-bottom: 32px;
-    }
-  }
-  
-  .hero-image-milk {
-    display: none;
-    position: absolute;
-  
-    @media screen and (min-width: 768px) {
-      display: block;
-      width: 124px;
-      height: 126px;
-      bottom: 0px;
-      left: 0px;
-    }
-    @media screen and (min-width: 1280px) {
-      display: block;
-      width: 188px;
-      height: 191px;
-      bottom: 0px;
-      left: -38px;
-    }
-  }
-  
-  .hero-img_girl {
+}
+
+.hero-img_girl {
+  width: 168px;
+  height: 133px;
+  display: none;
+  position: absolute;
+
+  @media screen and (min-width: 768px) {
+    display: block;
     width: 168px;
     height: 133px;
-    display: none;
-    position: absolute;
-  
-    @media screen and (min-width: 768px) {
-      display: block;
-      width: 168px;
-      height: 133px;
-      bottom: -49px;
-      right: -110px;
-    }
-    @media screen and (min-width: 1280px) {
-      width: 293px;
-      height: 232px;
-      bottom: -75px;
-      right: -158px;
-    }
+    bottom: -49px;
+    right: -110px;
   }
+  @media screen and (min-width: 1280px) {
+    width: 293px;
+    height: 232px;
+    bottom: -75px;
+    right: -158px;
+  }
+}
