Advantages text-transform fixed.

--- a/src/sass/layout/_advantages.scss
+++ b/src/sass/layout/_advantages.scss
@@ -103,6 +103,7 @@
     line-height: calc(55 / 48);
     margin-top: 36px;
     margin-bottom: 13px;
+    text-transform: none;
     @media screen and (min-width: 1280px) {
       font-size: 58px;
       line-height: calc(66 / 58);
