--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -106,8 +106,10 @@
 
   background: #fea5bb;
   fill: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: rgba(199, 19, 62, 1);
   }
 }
