--- a/src/sass/layout/_how-its-made.scss
+++ b/src/sass/layout/_how-its-made.scss
@@ -180,7 +180,9 @@
   background: #ffffff;
   border-radius: 22px;
   border: none;
-  &:hover {
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
     background: #ecebeb;
     cursor: pointer;
   }
