--- a/src/sass/layout/_index.scss
+++ b/src/sass/layout/_index.scss
@@ -1,5 +1,6 @@
 @import './modal';
 @import './header';
+@import './mobile-menu';
 @import './hero';
 @import './products';
 @import './how-its-made';
